--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,18 @@
   <head>
     <title>Headlines</title>
   </head>
-  <body>
+  <form>
+    <input type="text" name="publication" placeholder="search" />
+    <input type="submit" value="Submit" />
+  </form>
+  <hr>
     <h1>Headlines</h1>
-    <b>{{title}}</b><br />
-    <i>{{published}}</i><br />
-    <p>{{summary}}</p>
+    {% for article in articles %}
+      <!--- <b>{{article.title}}</b><br />  -->
+      <b><a href="{{article.link}}">{{article.title}}</a></b><br />
+      <i>{{article.published}}</i><br />
+      <p>{{article.summary}}</p>
+      <hr/>
+     {% endfor %}
   </body>
 </html>
